# codetruth

./: .gitignore  ARCHITECTURE_REVIEW.md  CONTEXT.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  README.md  RELIABILITY_IMPROVEMENTS.md  gotchas.txt  product-metadata.json
.windsurf/rules/: building-features.md
crates/ctp-cli/: Cargo.toml
crates/ctp-cli/src/: config.rs  engine_config.rs  llm_utils.rs  lsp.rs  main.rs  main_spec.rs  spec_commands.rs  validation.rs
crates/ctp-context/: Cargo.toml
crates/ctp-context/src/: compression.rs  context.rs  error.rs  essence.rs  integration.rs  lib.rs  registry.rs  relationship.rs
crates/ctp-core/: Cargo.toml
crates/ctp-core/src/: cache.rs  call_graph.rs  context_bridge.rs  coverage.rs  criticality.rs  detectors.rs  engine.rs  error.rs  lib.rs  models.rs  naming_patterns.rs
crates/ctp-core/src/detectors/: function_name_similarity.rs  semantic_similarity.rs
crates/ctp-dashboard/: Cargo.toml  README.md
crates/ctp-dashboard/src/: main.rs
crates/ctp-dashboard/templates/: dashboard.html
crates/ctp-design/: Cargo.toml
crates/ctp-design/src/: baseline.rs  deviation.rs  extractor.rs  lib.rs  tokens.rs
crates/ctp-drift/: Cargo.toml
crates/ctp-drift/src/: documentation_drift.rs  error_suppression.rs  git_analysis.rs  lib.rs  stub_detection.rs  workaround_detection.rs
crates/ctp-llm/: Cargo.toml
crates/ctp-llm/src/: context_aware.rs  lib.rs
crates/ctp-mcp/: Cargo.toml
crates/ctp-mcp/src/: cache.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  security.rs  server.rs  tools.rs
crates/ctp-parser/: Cargo.toml
crates/ctp-parser/src/: lib.rs
crates/ctp-policy/: Cargo.toml
crates/ctp-policy/src/: lib.rs
crates/ctp-product/: Cargo.toml
crates/ctp-product/src/: criticality.rs  impact.rs  lib.rs  metadata.rs
crates/ctp-spec/: Cargo.toml
crates/ctp-spec/src/: discovery.rs  generator.rs  keyword_dictionary.rs  lib.rs  validator.rs
crates/ctp-storage/: Cargo.toml
crates/ctp-storage/src/: lib.rs
crates/ctp-utils/: Cargo.toml
crates/ctp-utils/src/: lib.rs  text_similarity.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  changelog.md  custom.css  faq.md
docs/src/dev/: building.md  contributing.md  roadmap.md  testing.md
docs/src/guide/: cli.md  concepts.md  configuration.md  critical-weight-scoring.md  data-architecture-mapping.md  drift-detection.md  explanation-graphs.md  getting-started.md  installation.md  policy-evaluation.md  quick-start.md  reliability-criticality.md  reliability-quick-reference.md  reliability-system.md
docs/src/integration/: cicd.md  github-actions.md  gitlab-ci.md  ide.md  jetbrains.md  sdk-python.md  sdk-typescript.md  sdks.md  vscode.md
docs/src/spec/: api.md  architecture.md  explanation-graph.md  messages.md  pdl.md
integrations/github-action/: README.md  action.yml
integrations/gitlab-ci/: codetruth.yml
integrations/vscode/: package.json  tsconfig.json
integrations/vscode/src/: extension.ts  mcpClient.ts
policies/: criticality-coverage.yaml  criticality-tests.yaml  duplication-function-names.yaml  duplication-semantic.yaml  duplication.yaml  laravel-db-topology.yaml  laravel-migrations.yaml  laravel-queue.yaml  ui-duplicate-effects.yaml
spec/: KEYWORD_CONTRIBUTING.md  keywords.csv  product-metadata.schema.json
spec/examples/: full-explanation-graph.json  minimal-analysis.json  policy-definition.yaml
spec/schema/: explanation-graph.json  policy.json  product-metadata.json  semantic-context.json
tests/fixtures/: sample_python.py  sample_typescript.ts
