[package]
name = "ctp-design"
description = "Design system extraction and deviation detection for CodeTruth Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"
sha2 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
