[package]
name = "ctp-drift"
description = "Drift detection engine for CodeTruth Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"
ctp-utils = { path = "../ctp-utils" }
