[package]
name = "ctp-mcp"
description = "MCP Server for CodeTruth Protocol - AI-native integration via Model Context Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ctp-mcp"
path = "src/main.rs"

[dependencies]
ctp-core = { path = "../ctp-core" }
ctp-utils = { path = "../ctp-utils" }
ctp-policy = { path = "../ctp-policy" }
ctp-drift = { path = "../ctp-drift" }
ctp-parser = { path = "../ctp-parser" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

# MCP Protocol
rmcp = { version = "0.2", features = ["server", "transport-async-rw", "macros"] }

# Async runtime
futures = "0.3"

# File watching (for incremental analysis)
notify = { version = "6.0", optional = true }

# Caching
moka = { version = "0.12", features = ["future"] }

# Hashing
sha2 = "0.10"

# Pattern matching
glob = "0.3"

[features]
default = ["file-watching"]
file-watching = ["notify"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
