[package]
name = "ctp-product"
description = "Product sensitivity metadata and impact analysis for CodeTruth Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = "0.3"
