[package]
name = "ctp-storage"
description = "Storage layer for CodeTruth Protocol explanation graphs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
ctp-core = { path = "../ctp-core" }

[dev-dependencies]
tempfile = "3.0"
